--- a/project.html
+++ b/project.html
@@ -18,7 +18,7 @@
         <a href="#" class="login">Login</a>
     </nav>
 </header>
-<!--&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
+<!---------------------------------------------------------------------------------------------->
 <div class="content">
     <div class="text-section">
         <h1>Fully Managed Cloud & <br> Web Hosting</h1>
@@ -29,41 +29,43 @@
         <img src="Fotos/2.png" alt="Hosting Image">
     </div>
 </div>
-<!--&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
-<div class="domain-search-container">
-    <h2>Search Your Domain Now</h2>
-    <div class="domain-search-box">
-        <input type="text" placeholder="Search your domain...">
-        <button>Find Now</button>
+<!---------------------------------------------------------------------------------------------->
+<div class="container">
+    <div class="search-section">
+        <h2>Search Your Domain Now</h2>
+        <div class="search-box">
+            <input type="text" placeholder="Search your domain...">
+            <button>Find Now</button>
+        </div>
     </div>
     <div class="domain-pricing">
-        <div class="domain-item">
-            <p class="domain-name">.com</p>
-            <p class="domain-price">$10 / month</p>
+        <div class="domain">
+            <span class="domain-name">.com</span>
+            <span class="domain-price">$10 / month</span>
         </div>
-        <div class="domain-item">
-            <p class="domain-name">.co.uk</p>
-            <p class="domain-price">$30 / month</p>
+        <div class="domain">
+            <span class="domain-name">.co.uk</span>
+            <span class="domain-price">$30 / month</span>
         </div>
-        <div class="domain-item">
-            <p class="domain-name">.shop</p>
-            <p class="domain-price">$12 / month</p>
+        <div class="domain">
+            <span class="domain-name">.shop</span>
+            <span class="domain-price">$12 / month</span>
         </div>
-        <div class="domain-item">
-            <p class="domain-name">.in</p>
-            <p class="domain-price">$11 / month</p>
+        <div class="domain">
+            <span class="domain-name">.in</span>
+            <span class="domain-price">$11 / month</span>
         </div>
-        <div class="domain-item">
-            <p class="domain-name">.de</p>
-            <p class="domain-price">$17 / month</p>
+        <div class="domain">
+            <span class="domain-name">.de</span>
+            <span class="domain-price">$17 / month</span>
         </div>
-        <div class="domain-item">
-            <p class="domain-name">.nl</p>
-            <p class="domain-price">$20 / month</p>
+        <div class="domain">
+            <span class="domain-name">.nl</span>
+            <span class="domain-price">$20 / month</span>
         </div>
     </div>
 </div>
-<!-- -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
+<!-- --------------------------------------------------------------------------------------->
 <div class="general-four">
 
     <h2>Our Services </h2>
@@ -112,7 +114,7 @@
         </div>
     </div>
 </div>
-<!-- -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
+<!-- --------------------------------------------------------------------------------->
 <div class="general-five">
     <p class="title">Word From Our Clients</p>
     <div class="blocks-container">
@@ -163,3 +165,63 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
