--- a/project.html
+++ b/project.html
@@ -153,6 +153,145 @@
     </div>
     <div class="blue-line"></div> <!-- Синя смуга -->
 </div>
+<!--&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
+<div class="stats-section">
+    <div class="stat">
+        <h2>70K</h2>
+        <p>Shared Web Hosting</p>
+    </div>
+    <div class="stat">
+        <h2>100M</h2>
+        <p>VPS Hosting</p>
+    </div>
+    <div class="stat">
+        <h2>11K</h2>
+        <p>Dedicated Server</p>
+    </div>
+    <div class="stat">
+        <h2>199+</h2>
+        <p>Cloud Hosting</p>
+    </div>
+</div>
+<!--&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
+<div class="pricing-section">
+    <h2>Our Flexible Plan</h2>
+    <div class="pricing-cards">
+        <div class="card">
+            <h3>Monthly</h3>
+            <p class="price">$ 199.50</p>
+            <ul>
+                <li>Host 5 Domain</li>
+                <li>2GB NVMe Storage</li>
+                <li>50GB Bandwidth</li>
+                <li>Free SSL Certificate</li>
+                <li>24/7 Support</li>
+                <li>2GB NVMe Storage</li>
+                <li>Free SSL Certificate</li>
+            </ul>
+            <a href="#" class="buy-btn">Buy Now</a>
+        </div>
+        <div class="card highlight">
+            <h3>Quarterly</h3>
+            <p class="price">$ 199.50</p>
+            <ul>
+                <li>Host 5 Domain</li>
+                <li>2GB NVMe Storage</li>
+                <li>50GB Bandwidth</li>
+                <li>Free SSL Certificate</li>
+                <li>24/7 Support</li>
+                <li>2GB NVMe Storage</li>
+                <li>Free SSL Certificate</li>
+            </ul>
+            <a href="#" class="buy-btn">Buy Now</a>
+        </div>
+        <div class="card">
+            <h3>Semi Annually</h3>
+            <p class="price">$ 199.50</p>
+            <ul>
+                <li>Host 5 Domain</li>
+                <li>2GB NVMe Storage</li>
+                <li>50GB Bandwidth</li>
+                <li>Free SSL Certificate</li>
+                <li>24/7 Support</li>
+                <li>2GB NVMe Storage</li>
+                <li>Free SSL Certificate</li>
+            </ul>
+            <a href="#" class="buy-btn">Buy Now</a>
+        </div>
+        <div class="card">
+            <h3>Annually</h3>
+            <p class="price">$ 199.50</p>
+            <ul>
+                <li>Host 5 Domain</li>
+                <li>2GB NVMe Storage</li>
+                <li>50GB Bandwidth</li>
+                <li>Free SSL Certificate</li>
+                <li>24/7 Support</li>
+                <li>2GB NVMe Storage</li>
+                <li>Free SSL Certificate</li>
+            </ul>
+            <a href="#" class="buy-btn">Buy Now</a>
+        </div>
+    </div>
+</div>
+<!-- -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
+
+
+
+
+<footer>
+    <div class="container">
+        <div class="footer-section logo-section">
+            <img src="Fotos/LOGO.png" alt="Shield Logo" class="logo"> <br>
+            Nulla diam felis, malesuada ut erat <br> quis, mattis dignissim justo. Cras <br> cursus, lacus et dignissim volutpat
+        </div>
+
+        <div class="footer-section">
+            <h3>Quick Links</h3>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </div>
+        <div class="footer-section">
+            <h3>Services</h3>
+            <ul>
+                <li><a href="#">Shared Web Hosting</a></li>
+                <li><a href="#">VPS Hosting</a></li>
+                <li><a href="#">Dedicated Server</a></li>
+                <li><a href="#">Cloud Hosting</a></li>
+                <li><a href="#">Domain Names</a></li>
+                <li><a href="#">License Keys</a></li>
+            </ul>
+        </div>
+        <div class="footer-section">
+            <h3>Contact Us</h3>
+            <p><a href="mailto:shield.info@gmail.com">shield.info@gmail.com</a></p>
+            <p>+91 - 9xxx 000xx</p>
+            <h3>Follow Us</h3>
+            <div class="social-links">
+                <a href="#"><img src="Fotos/facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="Fotos/twitter.png" alt="Twitter"></a>
+                <a href="#"><img src="Fotos/youtube.png" alt="YouTube"></a>
+            </div>
+        </div>
+    </div>
+</footer>
+<!--&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
+<div class="bottom-bar">
+    <p class="left-text">© Copyright Ⓒ Shield. All Rights Reserved.</p>
+    <p class="right-text"><a href="#">Privacy Policy</a> | <a href="#">Terms & Conditions</a></p>
+</div>
+
+
+
+
+
+
+
+
 
 
 
